update logging approach