@@ -3,4 +3,7 @@ RUN mkdir /app
 COPY build/libs/libs /app/libs
 COPY build/libs/app.jar /app
 EXPOSE 8080
-CMD ["java", "-jar", "/app/app.jar"]
+CMD ["java", \
+     "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED", \
+     "-Dio.netty.tryReflectionSetAccessible=true", \
+     "-jar", "/app/app.jar"]
